src/test/ui/async-await/feature-gate-async_fn_in_traits.stderr
error[E0658]: dyn* trait objects are unstable
  --> $DIR/feature-gate-async_fn_in_traits.rs:5:31
   |
LL | pub fn dyn_star_parameter(_: &dyn* Send) {
   |                               ^^^^^^^^^
   |
   = note: see issue #91611 <https://github.com/rust-lang/rust/issues/91611> for more information
   = help: add `#![feature(async_fn_in_traits)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
